[workspace.package]
version = "0.1.0"
license = "MIT"
edition = "2021"
publish = false

[package]
name = "pebbles-game"
version.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
gstd = "1.4.2"
pebbles-game-io = { path = "io" }
parity-scale-codec = { version = "3", default-features = false }
scale-info = { version = "2", default-features = false }

[build-dependencies]
gear-wasm-builder = "1.4.2"
pebbles-game-io = { path = "io" }

[dev-dependencies]
gtest = "1.4.2"
gclient = "1.4.2"
tokio = "1"
xshell = "0.2"
anyhow = "1"
